[gd_scene load_steps=11 format=3 uid="uid://bomaairqx0y6l"]

[ext_resource type="Texture2D" uid="uid://gj4wp4wijlgc" path="res://UI/Wheel/colorwheel.png" id="1_16cvd"]
[ext_resource type="Script" uid="uid://b1eqdri2uk1ho" path="res://codings/colortest.gd" id="2_tybns"]
[ext_resource type="Texture2D" uid="uid://d2jxm4aa3cndr" path="res://UI/MenuTextures/weak.png" id="3_a4pka"]
[ext_resource type="Texture2D" uid="uid://px7lif53i3a" path="res://UI/MenuTextures/resist.png" id="4_iacvs"]
[ext_resource type="Texture2D" uid="uid://bpuhucpv12na5" path="res://UI/MenuTextures/netural.png" id="5_kkn45"]
[ext_resource type="Texture2D" uid="uid://bhcu85r73ct0x" path="res://UI/MenuTextures/doubleweak.png" id="6_0o8q4"]

[sub_resource type="Gradient" id="Gradient_8uruq"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3g5d6"]
gradient = SubResource("Gradient_8uruq")
width = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj7sc"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 32
border_width_top = 32
border_width_right = 32
border_width_bottom = 32
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u676l"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 32
border_width_top = 32
border_width_right = 32
border_width_bottom = 32
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 64
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="Wheel" type="TextureRect"]
light_mask = 0
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(500, 500)
texture = ExtResource("1_16cvd")
script = ExtResource("2_tybns")
color = Color(1, 0.32549, 0.294118, 1)

[node name="Rangenear1" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -183.102
offset_top = -7.51544
offset_right = -22.1016
offset_bottom = 7.48456
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-320.417, 6.67419)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="Rangenear2" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.624
offset_top = -7.69144
offset_right = -23.6236
offset_bottom = 7.30856
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-318.895, 6.8501)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="Rangeopose1" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.624
offset_top = -7.69144
offset_right = -23.6236
offset_bottom = 7.30856
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-318.895, 6.8501)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="Rangeopose2" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.624
offset_top = -7.69144
offset_right = -23.6236
offset_bottom = 7.30856
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-318.895, 6.8501)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="Rangeweak" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.624
offset_top = -7.69144
offset_right = -23.6236
offset_bottom = 7.30856
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-318.895, 6.8501)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="Rangeresist" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.624
offset_top = -7.69144
offset_right = -23.6236
offset_bottom = 7.30856
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-318.895, 6.8501)
texture = SubResource("GradientTexture1D_3g5d6")

[node name="ColorIndicator" type="Panel" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 540.002
offset_top = 400.002
offset_right = 738.002
offset_bottom = 598.002
pivot_offset = Vector2(-43.5209, 99.1564)
theme_override_styles/panel = SubResource("StyleBoxFlat_uj7sc")

[node name="Point" type="Panel" parent="ColorIndicator"]
show_behind_parent = true
light_mask = 0
layout_mode = 0
offset_left = -3.0
offset_right = 196.0
offset_bottom = 200.0
rotation = 0.781856
pivot_offset = Vector2(101.355, 101.278)
theme_override_styles/panel = SubResource("StyleBoxFlat_u676l")

[node name="WeakIcon" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3674)
texture = ExtResource("3_a4pka")

[node name="ResistIcon" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3674)
texture = ExtResource("4_iacvs")

[node name="NearIcon" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3674)
texture = ExtResource("4_iacvs")

[node name="NeturalIcon1" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3674)
texture = ExtResource("5_kkn45")

[node name="NeturalIcon2" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3674)
texture = ExtResource("5_kkn45")

[node name="DoubleWeakIcon" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 0
offset_left = 850.792
offset_top = 453.791
offset_right = 940.792
offset_bottom = 543.791
pivot_offset = Vector2(-354.311, 45.3676)
texture = ExtResource("6_0o8q4")
